[gd_scene load_steps=12 format=3]

[ext_resource type="FontFile" uid="uid://db2iqkpsywfvl" path="res://Resources/Fonts/VCR_OSD_MONO.ttf" id="1_gxec3"]
[ext_resource type="Shader" path="res://Shaders/blur.gdshader" id="1_vglxu"]
[ext_resource type="Script" path="res://Scripts/Menus/pause_menu.gd" id="2_fxi88"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4mdrt"]
shader = ExtResource("1_vglxu")
shader_parameter/blur = 0.0
shader_parameter/brightness = 1.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1c6h2"]

[sub_resource type="InputEventAction" id="InputEventAction_lj203"]
action = &"ui_cancel"
pressed = true

[sub_resource type="Shortcut" id="Shortcut_ahcr5"]
events = [SubResource("InputEventAction_lj203")]

[sub_resource type="Animation" id="Animation_5724g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/blur")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/brightness")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_81v7j"]
resource_name = "pause"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/blur")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [0.0, 1.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/brightness")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [1.0, 0.5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_fwem0"]
resource_name = "unpause"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/blur")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [1.5, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/brightness")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [0.5, 1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3hhl6"]
_data = {
"RESET": SubResource("Animation_5724g"),
"pause": SubResource("Animation_81v7j"),
"unpause": SubResource("Animation_fwem0")
}

[node name="PauseMenu" type="ColorRect"]
process_mode = 3
visible = false
material = SubResource("ShaderMaterial_4mdrt")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_fxi88")

[node name="MarginContainer" type="MarginContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TimerLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_fonts/font = ExtResource("1_gxec3")
text = "00:00:00"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 10

[node name="ContinueBtn" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_pressed_color = Color(1, 1, 1, 0.298039)
theme_override_colors/font_hover_color = Color(1, 1, 1, 0.5)
theme_override_fonts/font = ExtResource("1_gxec3")
theme_override_styles/focus = SubResource("StyleBoxEmpty_1c6h2")
shortcut = SubResource("Shortcut_ahcr5")
shortcut_in_tooltip = false
text = "RETURN TO GAME"
flat = true

[node name="OptionsBtn" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_pressed_color = Color(1, 1, 1, 0.3)
theme_override_colors/font_hover_color = Color(1, 1, 1, 0.5)
theme_override_fonts/font = ExtResource("1_gxec3")
theme_override_styles/focus = SubResource("StyleBoxEmpty_1c6h2")
text = "OPTIONS"
flat = true

[node name="ExtraBtn" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_pressed_color = Color(1, 1, 1, 0.298039)
theme_override_colors/font_hover_color = Color(1, 1, 1, 0.5)
theme_override_fonts/font = ExtResource("1_gxec3")
theme_override_styles/focus = SubResource("StyleBoxEmpty_1c6h2")
text = "EXTRA"
flat = true

[node name="QuitBtn" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_pressed_color = Color(1, 1, 1, 0.298039)
theme_override_colors/font_hover_color = Color(1, 1, 1, 0.5)
theme_override_fonts/font = ExtResource("1_gxec3")
theme_override_styles/focus = SubResource("StyleBoxEmpty_1c6h2")
text = "QUIT GAME"
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "unpause"
libraries = {
"": SubResource("AnimationLibrary_3hhl6")
}
